--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
     "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
+    "core-js": "^3.6.5",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
     "rxjs": "^6.5.3",
@@ -47,7 +47,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
+    "eslint": "^7.4.0",
     "typescript": "~3.9.6"
   }
 }
